--- a/styles/style.css
+++ b/styles/style.css
@@ -91,7 +91,6 @@ form {
     align-items: center;
 }
 
-
 #location {
     text-transform:capitalize;
     align-self: center;
@@ -163,11 +162,43 @@ form {
         margin: 20px auto 20px auto;
     }
 
+
     .search_result {
-        height: 80px;
+        align-self: center;
+        width: 500px;
+        display: grid;
+        grid-template-rows: repeat(5, 40px);
+        grid-template-columns: repeat(10, 50px);
+        text-align: left;
+    }
+
+    #location {
+        grid-column: 4/11;
+        font-size: 24pt;
+        margin: 0;
+    }
+
+    #temperature {
+        grid-row: 2/5;
+        grid-column: 4/11;
+        font-size: 40pt;
+        margin-bottom: 10px;
+    }
+
+    #weather_icon {
+        grid-row: 2;
+        grid-column: 1/11;
+        width: 120px;
+        margin: 0;
+    }
+
+    #forecast {
+        grid-column: 4/11;
+        grid-row: 4;
     }
 
     #search_bar {
+        max-width: 360px;
         padding-left: 50px;
     }
 }
