--- a/styles/style.css
+++ b/styles/style.css
@@ -24,7 +24,7 @@ h2 {
 }
 
 form {
-    height: 40px;
+    height: 30px;
     display: flex;
     flex-direction: row;
     column-gap: 10px;
@@ -38,21 +38,21 @@ form {
     border-width: 10px;
     border-color: #6741d9;
     box-shadow: inset 1px 1px #d0bfff;
-    padding: 10px;
+    padding: 10px 0px 10px 10px;
 }
 
 #search_bar {
-    width: 50vmin;
-    height: 36px;
+    width: 45vmin;
+    height: 35px;
     font-size: 14pt;
-    text-align: center;
+    text-align: left;
     border-radius: 5px;
     border-color: #f3f0ff;
     background-color: #f3f0ff;
     border-style: solid;
     border-width: 1px;
     box-shadow: inset;
-    padding-left: 63px;
+    padding-left: 10px;
 }
 
 #search_bar:focus{
@@ -64,13 +64,14 @@ form {
 }
 
 #submit {
-    border-radius: 15px;
     border-style: solid;
+    border-radius: 0px 15px 15px 0px;
     background-color: #b197fc;
     border-color: #b197fc;
-    box-shadow: 1.5px 1.5px #d0bfff;
-    height: 34px;
+    border-width: 10px;
+    height: 30px;
     width: auto;
+    object-fit: cover;
 }
 
 #submit:hover {
@@ -97,11 +98,14 @@ form {
     padding: 0;
     margin: 10px;
     height: max-content;
+    font-size: 8vmin;
+    order: 1;
 }
 
 #temperature {
-    font-size: 60pt;
+    font-size: 15vmin;
     margin: 0px;
+    order: 3;
 }
 
 #weather_icon {
@@ -109,11 +113,13 @@ form {
     image-resolution: 300dpi;
     align-self: center;
     margin-top: 10px;
+    order: 2;
 }
 
 #forecast {
     margin: 0px;
-    font-size: 24pt;
+    font-size: 10vmin;
+    order: 4;
 }
 
 #error_message {
@@ -133,17 +139,18 @@ form {
     }
 
     form {
+        height: 40px;
         justify-content: center;
         margin: 20px auto 40px auto;
     }
 
     #search_bar {
-        height: 40px;
+        height: 39px;
         font-size: 18pt;
     }
 
     #submit {
-        height: 38px;
+        height: 40px;
         font-size: 20pt;
     }
 }
@@ -169,41 +176,44 @@ form {
 
     .search_result {
         align-self: center;
-        width: 500px;
-        display: grid;
-        grid-template-rows: repeat(5, 40px);
-        grid-template-columns: repeat(10, 50px);
-        text-align: left;
+        display: flex;
+        flex-direction: row;
+    }
+
+    #weather_icon {
+        display: block;
+        width: 120px;
+        margin: 0;
+        order: 1;
+    }
+
+    .text_display {
+        flex-direction: column;
+        order: 2;
     }
 
     #location {
-        grid-column: 4/11;
         font-size: 24pt;
         margin: 0;
     }
 
+    .forecast_display {
+        flex-direction: column;
+    }
+
     #temperature {
-        grid-row: 2/5;
-        grid-column: 4/11;
         font-size: 40pt;
         margin-bottom: 10px;
     }
 
-    #weather_icon {
-        grid-row: 2;
-        grid-column: 1/11;
-        width: 120px;
-        margin: 0;
-    }
-
     #forecast {
-        grid-column: 4/11;
-        grid-row: 4;
+
     }
 
     #search_bar {
         max-width: 360px;
-        padding-left: 50px;
+        padding-left: 20px;
+        text-overflow: clip;
     }
 
     #error_message {
